fixup prophunt for lumarine