@@ -5,6 +5,6 @@ import dev.lumas.events.games.interfaces.TokenFormula;
 public class PropHuntTokenFormula extends TokenFormula<Integer> {
     @Override
     public int tokens(Integer context) {
-        return Math.max(2, Math.min(context, 10));
+        return Math.clamp(context, 3, 9);
     }
 }
